[Build|RelEng] Clean-up and fix EnrichPom java code and fix warning
- Move publish-to-maven project from Java-11 to 21 as the
Maven-publication process already requires Java-21
- Remove fix of scmConnection value as it's not necessary anymore (ECJ
metadata are fine out of the box) and it removes (accidentally) the
scm-tag information
- Remove now obsolete SCM-mapping
- Throw exceptions on missing information instead of using default and
be strict
- Add print-out about basic statics, i.e. the number of enhanced POM
files

- Remove unused enrichPoms.jardesc